Fixed backend tests, now running