@@ -56,7 +56,7 @@
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
     <configuration>
-        <mainClass>com.example.memciko.TaskApiApplication</mainClass>
+        <mainClass>com.memciko.example.TaskApiApplication</mainClass>
     </configuration>
         </plugin>
         <plugin>
@@ -65,7 +65,6 @@
           <configuration> 
             <source>23</source>
             <target>23</target>
-            <compilerArgs>--enable-preview</compilerArgs>
           </configuration>
         </plugin>
 
